--- a/css/contact-app.css
+++ b/css/contact-app.css
@@ -45,9 +45,9 @@ body {
 
 /* Logout button */
 .logout-btn {
-  position: fixed;
-  top: max(50px, env(safe-area-inset-top));
-  left: max(50px, env(safe-area-inset-left));
+  position: absolute;
+  top: 40px;
+  left: 30px;
   z-index: 1000;
 
   display: inline-flex;
@@ -144,7 +144,7 @@ body {
   font-size: 16px;
   border-radius: 10px;
   padding: 10px 12px;
-  width:100%;
+  width: 100%;
 }
 .search-icon {
   filter: drop-shadow(0 0 6px rgba(255, 8, 144, 0.6));
@@ -171,20 +171,20 @@ body {
 
 /* add contact card */
 .credentials-container {
-    margin: 20px auto;
-    padding: 30px;
-    width: 700px;
-    background: rgba(0, 0, 0, 0.6);
-    border-radius: 20px;
-    box-shadow: 0 0 20px rgba(3, 238, 255, 0.7);
-    text-align: center;
+  margin: 20px auto;
+  padding: 30px;
+  width: 700px;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(3, 238, 255, 0.7);
+  text-align: center;
 }
 .credentials-title {
-    font-size: 27px;
-    font-family: "Orbitron", sans-serif;
-    margin-bottom: 20px;
-    -webkit-text-stroke: 1px rgb(3, 238, 255);
-    text-shadow: 0 0 8px rgba(255, 8, 144, 0.6);
+  font-size: 27px;
+  font-family: "Orbitron", sans-serif;
+  margin-bottom: 20px;
+  -webkit-text-stroke: 1px rgb(3, 238, 255);
+  text-shadow: 0 0 8px rgba(255, 8, 144, 0.6);
 }
 
 /* form grid */
@@ -417,4 +417,36 @@ tbody tr:hover {
     grid-template-columns: 1fr;
     gap: 12px;
   }
+}
+/* Paginatiion buttons */
+.btn-pagination {
+  padding: 8px 10px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background: var(--space-pink);
+  color: #000;
+  font-weight: 700;
+  transition: transform 0.2s ease, background 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 0 12px rgba(255, 8, 144, 0.5);
+}
+
+.btn-pagination:hover {
+  background: var(--space-cyan);
+}
+.btn-delete {
+  background: #a41d38;
+}
+.btn-delete:hover {
+  background: #a10121;
+}
+
+.btn-pagination:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  box-shadow: none;
+}
+
+.table-wrap td button {
+  margin-left: 8px;
 }
